# Reflecto

./: .gitignore  main.py  pyproject.toml
src/reflecto/: __init__.py  core.py  schema.py  visualize.py
src/reflecto/assets/: config.json  stats.pt
src/reflecto/engines/: fitting.py  inference.py  model.py  script_builder.py
src/reflecto/simulate/: profile.py  simulate.py
src/reflecto/utils/: consts_genx.py  io.py  materials.py  physics.py
test_data/In2O3_Ar_30nm/: #1_10layer.hgx  #1_xrr_1layer.hgx  #2_10layer.hgx  #2_xrr_1layer.hgx  convert_sld_graph.py  fitting.py
test_data/In2O3_Ar_30nm/electron_density_results/: 1_electron_density.xlsx  2_electron_density.xlsx
